--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">alaojosephomokafe@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(+234) 08140473802</span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -191,7 +191,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Alao. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Alao. All rights reserved.</li><li>Design: <a href="http://html5up.net">Alao</a></li>
 					</ul>
 				</div>
 			</footer>
